--- a/notebooks/datathon_2023_nm.ipynb
+++ b/notebooks/datathon_2023_nm.ipynb
@@ -7792,55 +7792,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/bin/bash: /local/home/mamien/miniconda3/envs/science-clf-py3.9/lib/libtinfo.so.6: no version information available (required by /bin/bash)\n",
-      "Collecting plotly\n",
-      "  Downloading plotly-5.14.1-py2.py3-none-any.whl (15.3 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m15.3/15.3 MB\u001b[0m \u001b[31m100.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25hCollecting tenacity>=6.2.0\n",
-      "  Downloading tenacity-8.2.2-py3-none-any.whl (24 kB)\n",
-      "Requirement already satisfied: packaging in /local/home/mamien/miniconda3/envs/science-clf-py3.9/lib/python3.9/site-packages (from plotly) (23.0)\n",
-      "Installing collected packages: tenacity, plotly\n",
-      "Successfully installed plotly-5.14.1 tenacity-8.2.2\n",
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.0.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.1.2\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n"
-     ]
-    }
-   ],
-   "source": [
-    "! pip install plotly"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "math domain error",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[27], line 11\u001b[0m\n\u001b[1;32m      8\u001b[0m animated_clust[\u001b[39m'\u001b[39m\u001b[39mtime_step\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m animated_clust\u001b[39m.\u001b[39mindex\n\u001b[1;32m     10\u001b[0m \u001b[39m# create animated scatterplot\u001b[39;00m\n\u001b[0;32m---> 11\u001b[0m fig \u001b[39m=\u001b[39m px\u001b[39m.\u001b[39;49mscatter(animated_clust, x\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mdistance\u001b[39;49m\u001b[39m\"\u001b[39;49m, y\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39muphill\u001b[39;49m\u001b[39m\"\u001b[39;49m, animation_frame\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mtime_step\u001b[39;49m\u001b[39m\"\u001b[39;49m, animation_group\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mcluster\u001b[39;49m\u001b[39m\"\u001b[39;49m,\n\u001b[1;32m     12\u001b[0m               size\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mavg_hr\u001b[39;49m\u001b[39m\"\u001b[39;49m, color\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mcluster\u001b[39;49m\u001b[39m\"\u001b[39;49m, hover_name\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mcluster\u001b[39;49m\u001b[39m\"\u001b[39;49m,\n\u001b[1;32m     13\u001b[0m                 log_x\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m, size_max\u001b[39m=\u001b[39;49m\u001b[39m55\u001b[39;49m, range_x\u001b[39m=\u001b[39;49m[\u001b[39m0\u001b[39;49m, \u001b[39mmax\u001b[39;49m(animated_clust\u001b[39m.\u001b[39;49mdistance)], range_y\u001b[39m=\u001b[39;49m[\u001b[39m0\u001b[39;49m, \u001b[39mmax\u001b[39;49m(animated_clust\u001b[39m.\u001b[39;49muphill)])\n\u001b[1;32m     15\u001b[0m \u001b[39m# save to html\u001b[39;00m\n\u001b[1;32m     16\u001b[0m fig\u001b[39m.\u001b[39mwrite_html(\u001b[39m\"\u001b[39m\u001b[39manimated_clustering.html\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "File \u001b[0;32m~/miniconda3/envs/science-clf-py3.9/lib/python3.9/site-packages/plotly/express/_chart_types.py:66\u001b[0m, in \u001b[0;36mscatter\u001b[0;34m(data_frame, x, y, color, symbol, size, hover_name, hover_data, custom_data, text, facet_row, facet_col, facet_col_wrap, facet_row_spacing, facet_col_spacing, error_x, error_x_minus, error_y, error_y_minus, animation_frame, animation_group, category_orders, labels, orientation, color_discrete_sequence, color_discrete_map, color_continuous_scale, range_color, color_continuous_midpoint, symbol_sequence, symbol_map, opacity, size_max, marginal_x, marginal_y, trendline, trendline_options, trendline_color_override, trendline_scope, log_x, log_y, range_x, range_y, render_mode, title, template, width, height)\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mscatter\u001b[39m(\n\u001b[1;32m     13\u001b[0m     data_frame\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m,\n\u001b[1;32m     14\u001b[0m     x\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     60\u001b[0m     height\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m,\n\u001b[1;32m     61\u001b[0m ) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m go\u001b[39m.\u001b[39mFigure:\n\u001b[1;32m     62\u001b[0m     \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m     63\u001b[0m \u001b[39m    In a scatter plot, each row of `data_frame` is represented by a symbol\u001b[39;00m\n\u001b[1;32m     64\u001b[0m \u001b[39m    mark in 2D space.\u001b[39;00m\n\u001b[1;32m     65\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m---> 66\u001b[0m     \u001b[39mreturn\u001b[39;00m make_figure(args\u001b[39m=\u001b[39;49m\u001b[39mlocals\u001b[39;49m(), constructor\u001b[39m=\u001b[39;49mgo\u001b[39m.\u001b[39;49mScatter)\n",
-      "File \u001b[0;32m~/miniconda3/envs/science-clf-py3.9/lib/python3.9/site-packages/plotly/express/_core.py:2283\u001b[0m, in \u001b[0;36mmake_figure\u001b[0;34m(args, constructor, trace_patch, layout_patch)\u001b[0m\n\u001b[1;32m   2279\u001b[0m         trendline_rows\u001b[39m.\u001b[39mappend(\u001b[39mdict\u001b[39m(px_fit_results\u001b[39m=\u001b[39mfit_results))\n\u001b[1;32m   2281\u001b[0m fig\u001b[39m.\u001b[39m_px_trendlines \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mDataFrame(trendline_rows)\n\u001b[0;32m-> 2283\u001b[0m configure_axes(args, constructor, fig, orders)\n\u001b[1;32m   2284\u001b[0m configure_animation_controls(args, constructor, fig)\n\u001b[1;32m   2285\u001b[0m \u001b[39mreturn\u001b[39;00m fig\n",
-      "File \u001b[0;32m~/miniconda3/envs/science-clf-py3.9/lib/python3.9/site-packages/plotly/express/_core.py:542\u001b[0m, in \u001b[0;36mconfigure_axes\u001b[0;34m(args, constructor, fig, orders)\u001b[0m\n\u001b[1;32m    540\u001b[0m     configurators[c] \u001b[39m=\u001b[39m configure_cartesian_axes\n\u001b[1;32m    541\u001b[0m \u001b[39mif\u001b[39;00m constructor \u001b[39min\u001b[39;00m configurators:\n\u001b[0;32m--> 542\u001b[0m     configurators[constructor](args, fig, orders)\n",
-      "File \u001b[0;32m~/miniconda3/envs/science-clf-py3.9/lib/python3.9/site-packages/plotly/express/_core.py:651\u001b[0m, in \u001b[0;36mconfigure_cartesian_axes\u001b[0;34m(args, fig, orders)\u001b[0m\n\u001b[1;32m    649\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39m\"\u001b[39m\u001b[39mis_timeline\u001b[39m\u001b[39m\"\u001b[39m \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m args:\n\u001b[1;32m    650\u001b[0m         xaxis\u001b[39m.\u001b[39mupdate(title_text\u001b[39m=\u001b[39mx_title)\n\u001b[0;32m--> 651\u001b[0m     set_cartesian_axis_opts(args, xaxis, \u001b[39m\"\u001b[39;49m\u001b[39mx\u001b[39;49m\u001b[39m\"\u001b[39;49m, orders)\n\u001b[1;32m    653\u001b[0m \u001b[39m# Configure axis type across all x-axes\u001b[39;00m\n\u001b[1;32m    654\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39m\"\u001b[39m\u001b[39mlog_x\u001b[39m\u001b[39m\"\u001b[39m \u001b[39min\u001b[39;00m args \u001b[39mand\u001b[39;00m args[\u001b[39m\"\u001b[39m\u001b[39mlog_x\u001b[39m\u001b[39m\"\u001b[39m]:\n",
-      "File \u001b[0;32m~/miniconda3/envs/science-clf-py3.9/lib/python3.9/site-packages/plotly/express/_core.py:551\u001b[0m, in \u001b[0;36mset_cartesian_axis_opts\u001b[0;34m(args, axis, letter, orders)\u001b[0m\n\u001b[1;32m    549\u001b[0m     axis[\u001b[39m\"\u001b[39m\u001b[39mtype\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mlog\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    550\u001b[0m     \u001b[39mif\u001b[39;00m range_key \u001b[39min\u001b[39;00m args \u001b[39mand\u001b[39;00m args[range_key]:\n\u001b[0;32m--> 551\u001b[0m         axis[\u001b[39m\"\u001b[39m\u001b[39mrange\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m=\u001b[39m [math\u001b[39m.\u001b[39mlog(r, \u001b[39m10\u001b[39m) \u001b[39mfor\u001b[39;00m r \u001b[39min\u001b[39;00m args[range_key]]\n\u001b[1;32m    552\u001b[0m \u001b[39melif\u001b[39;00m range_key \u001b[39min\u001b[39;00m args \u001b[39mand\u001b[39;00m args[range_key]:\n\u001b[1;32m    553\u001b[0m     axis[\u001b[39m\"\u001b[39m\u001b[39mrange\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m=\u001b[39m args[range_key]\n",
-      "File \u001b[0;32m~/miniconda3/envs/science-clf-py3.9/lib/python3.9/site-packages/plotly/express/_core.py:551\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m    549\u001b[0m     axis[\u001b[39m\"\u001b[39m\u001b[39mtype\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mlog\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    550\u001b[0m     \u001b[39mif\u001b[39;00m range_key \u001b[39min\u001b[39;00m args \u001b[39mand\u001b[39;00m args[range_key]:\n\u001b[0;32m--> 551\u001b[0m         axis[\u001b[39m\"\u001b[39m\u001b[39mrange\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m=\u001b[39m [math\u001b[39m.\u001b[39;49mlog(r, \u001b[39m10\u001b[39;49m) \u001b[39mfor\u001b[39;00m r \u001b[39min\u001b[39;00m args[range_key]]\n\u001b[1;32m    552\u001b[0m \u001b[39melif\u001b[39;00m range_key \u001b[39min\u001b[39;00m args \u001b[39mand\u001b[39;00m args[range_key]:\n\u001b[1;32m    553\u001b[0m     axis[\u001b[39m\"\u001b[39m\u001b[39mrange\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m=\u001b[39m args[range_key]\n",
-      "\u001b[0;31mValueError\u001b[0m: math domain error"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# visualize the animated clustering\n",
     "import plotly.express as px\n",
@@ -7854,7 +7808,7 @@
     "# create animated scatterplot\n",
     "fig = px.scatter(animated_clust, x=\"distance\", y=\"uphill\", animation_frame=\"time_step\", animation_group=\"cluster\",\n",
     "              size=\"avg_hr\", color=\"cluster\", hover_name=\"cluster\",\n",
-    "                log_x=True, size_max=, range_x=[0, max(animated_clust.distance)], range_y=[0, max(animated_clust.uphill)])\n",
+    "                log_x=True, size_max=100, range_x=[0, max(animated_clust.distance)], range_y=[0, max(animated_clust.uphill)])\n",
     "\n",
     "# save to html\n",
     "fig.write_html(\"animated_clustering.html\")"
